// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card.Item renders correctly 1`] = `
<div
  className="c-card__item"
>
  <p>
    lorem
  </p>
</div>
`;

exports[`Card.Item renders correctly with a colour 1`] = `
<div
  className="c-card__item c-card__item--success"
>
  <p>
    lorem
  </p>
</div>
`;
